--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,12 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Pedro", pedro_path %></li>
+
+        <% if user_signed_in?  %>
+          <li><%= link_to "Sign out", destroy_user_session_path, class: "sign-out-link", method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign in", new_user_session_path, class: "sign-out-link" %></li>
+        <% end %>     
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
