--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         <li><%= link_to "Pedro", pedro_path %></li>
 
         <% if user_signed_in?  %>
+          <li><%= link_to 'New Pin', new_pin_path %></li>
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
           <li><%= link_to "Sign out", destroy_user_session_path, class: "sign-out-link", method: :delete %></li>
         <% else %>
